# mimir

./: CMakeLists.txt  mimir.R
Mimir/: Inference  Inference.h  Model  Model.h
Mimir/src/: abstract_selection_model.h  model_fitting_algorithm.h  positional_gradient_descent.h  positional_modified_gradient_descent.h  positional_selection_model.h
app/: app.cpp
source/app/: app.cpp
source/selection/: selection_model.cpp  selection_model.h
